# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  data.py  html.py  url_valid.py
page_analyzer/templates/: error.html  index.html  main.html  main_page.html  show_url.html  urls.html
